# e-comm-project-back

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  api.py  config.py  extensions.py  jwt_callbacks.py  models.py
app/routes/: __init__.py  auth.py  general.py  index.py  product.py
migrations/versions/: 3bd02f4f000a_base_migration.py  70045cc45db4_.py  c046b87789c8_base_migration.py  e8158b08c092_.py  f8bba6537965_.py
